fix: keep patcher compatible with Java 17